--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -3,10 +3,10 @@ name: Terraform Deploy
 on:
   push:
     branches:
-      - development  # Deploy automático no branch development
+      - development
   pull_request:
     branches:
-      - main  # Deploy após aprovação do PR para o branch main
+      - main
 
 jobs:
   terraform:
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.5.0  # Substitua pela versão do Terraform que você está usando
+          terraform_version: 1.5.0
 
       - name: Determine Terraform Directory
         id: tf-dir
@@ -33,6 +33,9 @@ jobs:
             echo "TF_WORKSPACE=production" >> $GITHUB_ENV
           fi
 
+      - name: Unset TF_WORKSPACE before selecting workspace
+        run: unset TF_WORKSPACE
+
       - name: Terraform Init
         run: terraform init
         working-directory: ${{ env.TF_DIR }}
@@ -41,8 +44,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Select Terraform Workspace
-        run: |
-          terraform workspace select ${{ env.TF_WORKSPACE }}
+        run: terraform workspace select ${{ env.TF_WORKSPACE }} || terraform workspace new ${{ env.TF_WORKSPACE }}
         working-directory: ${{ env.TF_DIR }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
