--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           terraform_version: 1.5.0
 
-      - name: Set Terraform Directory and Workspace
+      - name: Determine Terraform Directory and Workspace
         id: tf-env
         run: |
           if [ "${{ github.ref }}" == "refs/heads/development" ]; then
@@ -42,8 +42,8 @@ jobs:
 
       - name: Select or Create Terraform Workspace
         run: |
-          unset TF_WORKSPACE
-          terraform workspace select ${{ env.TF_WORKSPACE }}
+          echo "TF_WORKSPACE=${{ env.TF_WORKSPACE }}"
+          terraform workspace select ${{ env.TF_WORKSPACE }} || terraform workspace new ${{ env.TF_WORKSPACE }}
         working-directory: ${{ env.TF_DIR }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
