--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Select or Create Terraform Workspace
         run: |
           echo "TF_WORKSPACE=${{ env.TF_WORKSPACE }}"
-          terraform workspace select ${{ env.TF_WORKSPACE }} || terraform workspace new ${{ env.TF_WORKSPACE }}
+          terraform workspace select ${{ env.TF_WORKSPACE }}
         working-directory: ${{ env.TF_DIR }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
