--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.9.3
+          terraform_version: 1.5.0
 
       - name: Determine Terraform Directory and Workspace
         id: tf-env
@@ -39,6 +39,12 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Clean Environment Variables
+        run: |
+          unset TF_WORKSPACE
+          echo "TF_WORKSPACE unset"
+        working-directory: ${{ env.TF_DIR }}
 
       - name: Select or Create Terraform Workspace
         run: |
