--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,8 +38,8 @@ jobs:
           IMAGE_TAG=${{ github.ref_name }}
           # Remove qualquer caractere inválido da tag
           IMAGE_TAG=$(echo "$IMAGE_TAG" | sed 's/[^a-zA-Z0-9._-]/_/g')
-          docker tag fastapi-app:latest 061039781993.dkr.ecr.us-east-2.amazonaws.com/demoorbidi/fastapi-app:$IMAGE_TAG
-          docker push 061039781993.dkr.ecr.us-east-2.amazonaws.com/demoorbidi/fastapi-app:$IMAGE_TAG
+          docker tag fastapi-app:latest 061039781993.dkr.ecr.us-east-2.amazonaws.com/fastapi-app:$IMAGE_TAG
+          docker push 061039781993.dkr.ecr.us-east-2.amazonaws.com/fastapi-app:$IMAGE_TAG
           
       - name: Build and push Django image
         run: |
@@ -48,8 +48,8 @@ jobs:
           IMAGE_TAG=${{ github.ref_name }}
           # Remove qualquer caractere inválido da tag
           IMAGE_TAG=$(echo "$IMAGE_TAG" | sed 's/[^a-zA-Z0-9._-]/_/g')
-          docker tag django-app:latest 061039781993.dkr.ecr.us-east-2.amazonaws.com/demoorbidi/django-app:$IMAGE_TAG
-          docker push 061039781993.dkr.ecr.us-east-2.amazonaws.com/demoorbidi/django-app:$IMAGE_TAG
+          docker tag django-app:latest 061039781993.dkr.ecr.us-east-2.amazonaws.com/django-app:$IMAGE_TAG
+          docker push 061039781993.dkr.ecr.us-east-2.amazonaws.com/django-app:$IMAGE_TAG
         
 
       - name: Deploy FastAPI service to ECS
