--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - development
+      - main
     paths:
       - 'django-app/**'
       - 'fastapi-app/**'
@@ -51,7 +52,51 @@ jobs:
           docker tag django-app:latest 061039781993.dkr.ecr.us-east-2.amazonaws.com/django-app:${{ github.ref_name }}
           docker push 061039781993.dkr.ecr.us-east-2.amazonaws.com/django-app:${{ github.ref_name }}
 
-      - name: Check and create ECS FastAPI service
+      - name: Register ECS FastAPI Task Definition (Development)
+        if: github.ref == 'refs/heads/development'
+        run: |
+          aws ecs register-task-definition \
+            --family fastapi-task \
+            --container-definitions '[{"name": "fastapi-container", "image": "061039781993.dkr.ecr.us-east-2.amazonaws.com/fastapi-app:${{ github.ref_name }}", "memory": 512, "cpu": 256, "essential": true}]' \
+            --region us-east-2
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Register ECS Django Task Definition (Development)
+        if: github.ref == 'refs/heads/development'
+        run: |
+          aws ecs register-task-definition \
+            --family django-task \
+            --container-definitions '[{"name": "django-container", "image": "061039781993.dkr.ecr.us-east-2.amazonaws.com/django-app:${{ github.ref_name }}", "memory": 512, "cpu": 256, "essential": true}]' \
+            --region us-east-2
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Register ECS FastAPI Task Definition (Production)
+        if: github.ref == 'refs/heads/main'
+        run: |
+          aws ecs register-task-definition \
+            --family fastapi-task \
+            --container-definitions '[{"name": "fastapi-container", "image": "061039781993.dkr.ecr.us-east-2.amazonaws.com/fastapi-app:${{ github.ref_name }}", "memory": 512, "cpu": 256, "essential": true}]' \
+            --region us-west-1
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Register ECS Django Task Definition (Production)
+        if: github.ref == 'refs/heads/main'
+        run: |
+          aws ecs register-task-definition \
+            --family django-task \
+            --container-definitions '[{"name": "django-container", "image": "061039781993.dkr.ecr.us-east-2.amazonaws.com/django-app:${{ github.ref_name }}", "memory": 512, "cpu": 256, "essential": true}]' \
+            --region us-west-1
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Check and create ECS FastAPI service (Development)
         if: github.ref == 'refs/heads/development'
         run: |
           # Check if service exists
@@ -77,7 +122,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Check and create ECS Django service
+      - name: Check and create ECS Django service (Development)
         if: github.ref == 'refs/heads/development'
         run: |
           # Check if service exists
